Finishing mockito session.