@@ -1,6 +1,7 @@
 package br.com.bvidotto.service;
 
 import static br.com.bvidotto.builder.LocationBuilder.*;
+import static br.com.bvidotto.builder.MovieBuilder.*;
 import static br.com.bvidotto.utils.DataUtils.*;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
@@ -28,22 +29,29 @@ import br.com.bvidotto.exceptions.RentalCompanyException;
 import br.com.bvidotto.matchers.OwnMatchers;
 import br.com.bvidotto.utils.DataUtils;
 import org.junit.After;
+import org.junit.Assert;
 import org.junit.Assume;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ErrorCollector;
 import org.junit.rules.ExpectedException;
+import org.mockito.ArgumentCaptor;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.Mockito;
+import org.mockito.MockitoAnnotations;
 
 public class LocationServiceTest {
 
+    @InjectMocks
     private LocationService locationService;
 
+    @Mock
     private LocationDao dao;
-
+    @Mock
     private EmailService emailService;
-
+    @Mock
     private DebtService debtService;
 
     private static int count = 0;
@@ -56,13 +64,7 @@ public class LocationServiceTest {
 
     @Before
     public void setup() {
-        dao = mock(LocationDao.class);
-        debtService = mock(DebtService.class);
-        emailService = mock(EmailService.class);
-        locationService = new LocationService();
-        locationService.setLocationDao(dao);
-        locationService.setDebtService(debtService);
-        locationService.setEmailService(emailService);
+        MockitoAnnotations.initMocks(this);
     }
 
     @After
@@ -76,8 +78,8 @@ public class LocationServiceTest {
         Assume.assumeFalse(verifyDayOfWeek(new Date(), Calendar.SATURDAY)); //Only execute if is not saturday
         //scenery
         User user = UserBuilder.oneUser().now();
-        Movie movie1 = MovieBuilder.oneMovie().now();
-        Movie movie2 = MovieBuilder.oneMovie().withValue(2.0).now();
+        Movie movie1 = oneMovie().now();
+        Movie movie2 = oneMovie().withValue(2.0).now();
         List<Movie> movies = Arrays.asList(movie1, movie2);
 
         //action
@@ -104,8 +106,8 @@ public class LocationServiceTest {
     public void shouldThrowExceptionWhenMovieIsOutOfStock() throws MovieOutOfStockException, RentalCompanyException {
         //scenery
         User user = UserBuilder.oneUser().now();
-        Movie movie1 = MovieBuilder.oneMovie().now();
-        Movie movie2 = MovieBuilder.oneMovie().noStock().now();
+        Movie movie1 = oneMovie().now();
+        Movie movie2 = oneMovie().noStock().now();
         List<Movie> movies = Arrays.asList(movie1, movie2);
 
         //action
@@ -116,8 +118,8 @@ public class LocationServiceTest {
     @Test
     public void shouldThrowExceptionWhenUserIsEmpty() throws MovieOutOfStockException {
         //scenery
-        Movie movie1 = MovieBuilder.oneMovie().now();
-        Movie movie2 = MovieBuilder.oneMovie().noStock().now();
+        Movie movie1 = oneMovie().now();
+        Movie movie2 = oneMovie().noStock().now();
         List<Movie> movies = Arrays.asList(movie1, movie2);
 
         //action
@@ -146,7 +148,7 @@ public class LocationServiceTest {
     @Test
     public void shouldGive25percentOffOnTheThirdMovieHired() throws MovieOutOfStockException, RentalCompanyException {
         //scenery
-        Movie movie1 = MovieBuilder.oneMovie().now();
+        Movie movie1 = oneMovie().now();
         Movie movie2 = new Movie("Movie 2", 3, 2.0);
         Movie movie3 = new Movie("Movie 3", 3, 2.0);
 
@@ -163,7 +165,7 @@ public class LocationServiceTest {
     @Test
     public void shouldGive50percentOffOnTheFourthMovieHired() throws MovieOutOfStockException, RentalCompanyException {
         //scenery
-        Movie movie1 = MovieBuilder.oneMovie().now();
+        Movie movie1 = oneMovie().now();
         Movie movie2 = new Movie("Movie 2", 3, 5.0);
         Movie movie3 = new Movie("Movie 3", 3, 4.0);
         Movie movie4 = new Movie("Movie 4", 3, 3.0);
@@ -182,7 +184,7 @@ public class LocationServiceTest {
     @Test
     public void shouldGive75percentOffOnTheFifthMovieHired() throws MovieOutOfStockException, RentalCompanyException {
         //scenery
-        Movie movie1 = MovieBuilder.oneMovie().now();
+        Movie movie1 = oneMovie().now();
         Movie movie2 = new Movie("Movie 2", 3, 5.0);
         Movie movie3 = new Movie("Movie 3", 3, 4.0);
         Movie movie4 = new Movie("Movie 4", 3, 3.0);
@@ -202,7 +204,7 @@ public class LocationServiceTest {
     @Test
     public void shouldGive100percentOffOnTheSixthMovieHired() throws MovieOutOfStockException, RentalCompanyException {
         //scenery
-        Movie movie1 = MovieBuilder.oneMovie().now();
+        Movie movie1 = oneMovie().now();
         Movie movie2 = new Movie("Movie 2", 3, 5.0);
         Movie movie3 = new Movie("Movie 3", 3, 4.0);
         Movie movie4 = new Movie("Movie 4", 3, 3.0);
@@ -225,7 +227,7 @@ public class LocationServiceTest {
     public void mustReturnOnMondayWhenRentingOnSaturday() throws MovieOutOfStockException, RentalCompanyException {
         Assume.assumeTrue(verifyDayOfWeek(new Date(), Calendar.SATURDAY)); //Only executes on saturday
 
-        Movie movie1 = MovieBuilder.oneMovie().now();
+        Movie movie1 = oneMovie().now();
         List<Movie> movies = List.of(movie1);
         User user = UserBuilder.oneUser().now();
 
@@ -236,7 +238,7 @@ public class LocationServiceTest {
     }
 
     @Test
-    public void deveDevolverNaSegundaAoAlugarNoSabado() throws MovieOutOfStockException, RentalCompanyException{
+    public void shouldGoBackMondayWhenHireOnSaturday() throws MovieOutOfStockException, RentalCompanyException{
         Assume.assumeTrue(verifyDayOfWeek(new Date(), Calendar.SATURDAY));
 
         User user = UserBuilder.oneUser().now();
@@ -248,7 +250,7 @@ public class LocationServiceTest {
     }
 
     @Test
-    public void shouldThrowExceptionWhenUserIsInDebt() throws MovieOutOfStockException {
+    public void shouldThrowExceptionWhenUserIsInDebt() throws Exception {
         User user = UserBuilder.oneUser().now();
         List<Movie> movies = List.of(new Movie("Filme 1", 1, 5.0));
 
@@ -268,11 +270,41 @@ public class LocationServiceTest {
     @Test
     public void shouldNotifyLocationsDelay(){
         User user = UserBuilder.oneUser().now();
-        List<Location> locations = List.of(oneLocation().withUser(user).withReturnDate(getDataWithDifferentDate(-2)).now());
+        User user2 = UserBuilder.oneUser().withName("User with no delay").now();
+        List<Location> locations = Arrays.asList(
+            oneLocation().withUser(user).withReturnDate(getDataWithDifferentDate(-2)).now(),
+            oneLocation().withUser(user2).now());
         when(dao.getPendingLocations()).thenReturn(locations);
 
         locationService.notifyDelays();
 
         verify(emailService).notify(user);
+    }
+
+    @Test
+    public void shouldTreatErrorOnDebtService() throws Exception {
+        User user = UserBuilder.oneUser().now();
+        List<Movie> movies = List.of(oneMovie().now());
+
+        when(debtService.isInDebt(user)).thenThrow(new Exception("Fail at all"));
+
+        exception.expect(RentalCompanyException.class);
+        exception.expectMessage("System is not working now, try again later.");
+
+        locationService.hireMovie(user, movies);
+
+    }
+
+    @Test
+    public void shouldPostponeALocation() {
+        Location location = oneLocation().now();
+
+        locationService.postponeLocation(location,3);
+
+        ArgumentCaptor<Location> argumentCaptor = ArgumentCaptor.forClass(Location.class);
+        Mockito.verify(dao).save(argumentCaptor.capture());
+        Location returnedLocation = argumentCaptor.getValue();
+
+        Assert.assertThat(returnedLocation.getValue(), is(12.0));
     }
 }
